Fix stats bar alignment, issue badge alignment

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -27,6 +27,11 @@
   font-size: .8em;
 }
 
+/*br {
+   display: block;
+   margin: 5px 0;
+}*/
+
 /*Button media queries*/
 .btn {
   color: #fff;
@@ -138,6 +143,10 @@ nav .brand-logo{
 
 .width70{
   width: 70%;
+}
+
+.width68{
+  width: 68%;
 }
 
 .width60{
@@ -301,9 +310,9 @@ nav .brand-logo{
 }
 
 #stats-box-left{
- margin-left: 5%;
+  margin-left: 5%;
   margin-right: 0;
-  margin-top: 1%;
+  /*margin-top: 1%;*/
   width: 30%;
   height: 85px;
 }
@@ -331,5 +340,9 @@ nav .brand-logo{
 
 #stats-box-question{
   margin-top: 5px;
+}
+
+#stats-table td, th {
+  padding: 10px 5px;
 }
 
